--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
-<div class="content" layout:fragment="content">
-
-    <form role="form" method="post" action="/login-process">
-        <div class="form-group">
-            <label th:for="id">아이디</label>
-            <input type="id" name="id" class="form-control" placeholder="아이디를 입력하세요.">
-        </div>
-        <div class="form-group">
-            <label th:for="phone">핸드폰 번호</label>
-            <input type="phone" name="phone" id="phone" class="form-control" placeholder="폰번호를 입력하세요.">
-        </div>
-        <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-        <button class="btn btn-primary">로그인</button>
-<!--        <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원 가입</button>-->
-<!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
-    </form>
-
-</div>
-
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<head>
+    <title>Please Log In</title>
+</head>
+<body>
+<h1>Please Log In</h1>
+<div th:if="${param.error}">
+    Invalid username and password.</div>
+<div th:if="${param.logout}">
+    You have been logged out.</div>
+<form th:action="@{/login}" method="post" action="/login-process">
+    <div>
+        <input type="text" name="username" placeholder="Username"/>
+    </div>
+    <div>
+        <input type="password" name="password" placeholder="Password"/>
+    </div>
+    <input type="submit" value="Log in" />
+</form>
+</body>
 </html>
